--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "app-launcher",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
+    "dev": "vite",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "@tauri-apps/api": "^1"
+    "@quasar/extras": "^1.0.0",
+    "@tauri-apps/api": "^1",
+    "quasar": "^2.0.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5",
-    "@tauri-apps/cli": "^1"
-  }
+    "vue-cli-plugin-quasar": "~5.0.2",
+    "vue-tsc": "^1.8.5"
+  },
+  "type": "module"
 }
