--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@quasar/extras": "^1.0.0",
     "@tauri-apps/api": "^1",
     "quasar": "^2.0.0",
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
