--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "app-launcher"
 version = "0.0.1"
-description = "An simple App-Launcher for Windows"
+description = "A simple App-Launcher for Windows"
 authors = ["bedllinger"]
 edition = "2021"
 
