--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "App-Launcher"
+name = "app_launcher"
 version = "0.0.1"
 description = "A simple App-Launcher for Windows"
 authors = ["bedllinger"]
